--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "17.0.13",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "4.3.5"
   }
 }
