commit code for sass

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,16 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
+  },
+  "settings": {
+    "import/resolver": {
+      "babel-module": {
+        "extensions": [".js", ".jsx"]
+      },
+      "node": {
+        "extensions": [".js", ".jsx"],
+        "paths": ["~"]
+      }
+    }
   }
 }
