--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
+    "next": "^11.0.2-canary.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tsx-control-statements": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
+    "babel-plugin-jsx-control-statements": "^4.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "sass": "^1.35.1",
     "typescript": "4.3.5"
   }
 }
