--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,26 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@lib/*": ["lib/*"],
+      "@api/*": ["api/*"],
+      "@models/*": ["models/*"],
+      "@screens/*": ["screens/*"],
+      "@hooks/*": ["hooks/*"],
+      "@services/*": ["services/*"],
+      "@constants/*": ["constants/*"],
+      "@context/*": ["context/*"],
+      "@queries/*": ["queries/*"],
+      "@data/*": ["data/*"],
+      "@typeDefs/*": ["types/*"],
+      "@generated/*": ["generated/*"],
+      "@utils/*": ["utils/*"],
+      "@public/*": ["public/*"],
+      "@styles/*": ["styles/*"],
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
